Archive2/ff/cb99b8d782b566/output
+ mv main.cpp main.c
+ gcc -std=c89 -O0 -Wall -Wextra -pedantic -pthread main.c
main.c: In function 'main':
main.c:9:2: error: too many arguments to function 'foo'
  foo(1,2,3,4,5,6,67);
  ^
main.c:3:6: note: declared here
 void foo(void){
      ^
